make animation time-based
decouple animation speed from framerate. also move DOM work to index.html.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         
         game.scoreUpdate();
 
-
+        setInterval(() => {
+            let gameScore = document.getElementById("gameScore");
+            gameScore.innerHTML = game.gameScore
+        }, 1000 / 60);
     </script>
 
 </body>
